objects/rrde__RRD_Assignments__c.object
<CustomObject>
    <description>This is an object to maintain the assignment history for lead done through RRD.</description>
    <fields>
        <fullName>rrde__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RRD Assignments</relationshipLabel>
        <relationshipName>RRD_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin Algorithm</fullName>
                </value>
                <value>
                    <fullName>Email based assignment</fullName>
                </value>
                <value>
                    <fullName>Relationship based assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__Assignment_Type_new__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin Algorithm</fullName>
                </value>
                <value>
                    <fullName>Email based assignment</fullName>
                </value>
                <value>
                    <fullName>Relationship based assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RRD Assignments</relationshipLabel>
        <relationshipName>RRD_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Queue__c</fullName>
        <label>Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Released_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RRD Assignments</relationshipLabel>
        <relationshipName>RRD_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Released_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Released Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>RRD Assignments</relationshipLabel>
        <relationshipName>RRD_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round Robin User</label>
        <referenceTo>rrde__Round_Robin_Users__c</referenceTo>
        <relationshipLabel>RRD Assignments</relationshipLabel>
        <relationshipName>RRD_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User assigned based on email address is mapped to this field</description>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RRD_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__User_Name__c</fullName>
        <formula>IF( rrde__Salesforce_User__c != null,  rrde__Salesforce_User__r.FirstName +&apos; &apos;+ rrde__Salesforce_User__r.LastName , 

IF( rrde__Round_Robin_User__r.rrde__Round_Robin_User_Name__r.FirstName != null, 
(rrde__Round_Robin_User__r.rrde__Round_Robin_User_Name__r.FirstName + &apos; &apos;+rrde__Round_Robin_User__r.rrde__Round_Robin_User_Name__r.LastName),
 
IF(rrde__Released_Lead__r.Owner:Queue.QueueName != null,
rrde__Released_Lead__r.Owner:Queue.QueueName,

IF( rrde__Released_Case__c !=null,
 rrde__Released_Case__r.Owner:Queue.QueueName,
null
)
)
)
)</formula>
        <label>Owner Assigned</label>
        <type>Text</type>
    </fields>
    <label>RRD Assignment</label>
    <listViews>
        <fullName>rrde__All</fullName>
        <columns>rrde__Assignment_Type__c</columns>
        <columns>rrde__Queue__c</columns>
        <columns>rrde__Released_Lead__c</columns>
        <columns>rrde__Round_Robin_User__c</columns>
        <columns>rrde__Salesforce_User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRDA{0000}</displayFormat>
        <label>RRD Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RRD Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>